--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="quiz-container">
     <h1>Quiz de Cultura General</h1>
-    <form id="quizForm" action="https://formspree.io/f/TU-ENDPOINT" method="POST">
+    <form id="quizForm" action="https://formspree.io/f/xeoznkep" method="POST">
       <div id="quiz"></div>
       <button type="submit" id="submitBtn">Enviar respuestas</button>
       <p id="score"></p>
